force-app/main/default/objects/Appliance__c/fields/Appliance_Serial__c.field-meta.xml
<CustomField>
    <fullName>Appliance_Serial__c</fullName>
    <description>Appliance Serial Number</description>
    <externalId>true</externalId>
    <label>Appliance Serial</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>