force-app/main/default/objects/Appliance__c/fields/BeenDeployed__c.field-meta.xml
<CustomField>
    <fullName>BeenDeployed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has this appliance been picked for a customer?</description>
    <label>BeenDeployed</label>
    <type>Checkbox</type>
</CustomField>