force-app/main/default/objects/Appliance__c/fields/InProcess__c.field-meta.xml
<CustomField>
    <fullName>InProcess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>InProcess</label>
    <type>Checkbox</type>
</CustomField>